--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>RIT Senior Project: Single Pane of Glass</title>
+</head>
+<body>
+    <h1>RIT Senior Project: Single Pane of Glass<h1>
+    <h2>Project Overview</h2>
+    <h3>Description</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident,
+    impedit veniam maxime magni natus nihil. Nihil, quos? Eius ad minus repellat
+    reprehenderit modi fugiat fugit ipsam accusamus harum, perspiciatis illum.</p>
+    <h3>Members:</h3>
+    <ul>
+        <li>Phil Ganem</li>
+        <li>Dylan Mulligan</li>
+        <li>Connor Poulos</li>
+        <li>Laxmi Poudel</li>
+        <li>Ethan Ferguson</li>
+    </ul>
+</body>
+</html>
