--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>RIT Senior Project: Single Pane of Glass</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../dist/output.css" />
-</head>
-<body class="bg-green-400">
-    <h1>RIT Senior Project: Single Pane of Glass<h1>
-    <h2>Project Overview</h2>
-    <h3>Description</h3>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident,
-    impedit veniam maxime magni natus nihil. Nihil, quos? Eius ad minus repellat
-    reprehenderit modi fugiat fugit ipsam accusamus harum, perspiciatis illum.</p>
-    <h3>Members:</h3>
-    <ul>
-        <li>Phil Ganem</li>
-        <li>Dylan Mulligan</li>
-        <li>Connor Poulos</li>
-        <li>Laxmi Poudel</li>
-        <li>Ethan Ferguson</li>
-    </ul>
-</body>
+    <head>
+        <title>RIT Senior Project: Single Pane of Glass</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../dist/output.css" />
+    </head>
+    <!-- 
+    Your team name, the name of your project, sponsoring organization,
+     coach, and individual team member names and roles.
+    -->
+    <body class="h-screen bg-white font-mono m-8 [&_p]:text-[#2A2B2A] [&_h1]:text-[#FF8966] [&_h2]:text-[#E5446D] [&_h3]:text-[#706C61] [&_h3]:py-2 [&_h3]:text-2xl">
+        <h1 class="text-5xl font-bold ">RIT Senior Project: The Nimbus Navigators<h1>
+        <div class="pt-4">
+            <h2 class="text-4xl font-bold">Project Overview</h2>
+            <div class="pt-2">
+                <p>Project Name: Single Pane of Glass</p>
+                <p>Sponser: Honeywell</p>
+                <p>Coach: Bryan Bashum</p>
+                <h3 class="font-bold">Description</h3>
+                <p class="pb-2">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab dignissimos amet quasi sapiente
+                    repellendus error, perspiciatis accusantium odio cupiditate vitae quidem minima culpa quo
+                    asperiores. Porro unde quasi necessitatibus velit nam tempore a quod sit debitis quaerat
+                    voluptatem animi, tempora distinctio incidunt obcaecati nostrum maxime illo voluptas voluptatibus,
+                    perferendis doloremque perspiciatis minima maiores facilis? Debitis id voluptate iste laboriosam
+                    quisquam perferendis quaerat omnis architecto, sint eligendi aut commodi vitae accusamus impedit
+                    voluptatum ea inventore, earum harum quos voluptas sit eveniet, libero reprehenderit maxime? Facilis
+                    hic asperiores ipsam sint quis illo veniam repellendus? Eius accusantium unde possimus harum molestias
+                    id ratione?
+                </p>
+                <div class="[&_li]:p-1 [&_li]:before:content-['>>'] [&_li]:text-black">
+                    <h3 class="font-bold">Members</h3>
+                    <ul>
+                        <li> Phil Ganem</li>
+                        <li> Dylan Mulligan</li>
+                        <li> Connor Poulos</li>
+                        <li> Laxmi Poudel</li>
+                        <li> Ethan Ferguson</li>
+                    </ul>
+                    <h3 class="font-bold">Roles</h3>
+                    <ul>
+                        <li> Project Manager: Connor Poulos</li>
+                        <li> Communicator: Connor Poulos</li>
+                        <li> Note Taker: Connor Poulos</li>
+                        <li> Architect: Dylan Mulligan</li>
+                    </ul>
+                </div>
+                <p class="italic font-bold text-sm py-2">
+                Note: All members perticpate in development –
+                therefore all can assume the role of developer
+                </p>
+            </div>
+        </div>
+    </body>
 </html>
