--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <title>RIT Senior Project: Single Pane of Glass</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="output.css" />
+        <link rel="stylesheet" href="./output.css" />
     </head>
     <body class="h-screen bg-white font-mono m-8 [&_p]:text-[#2A2B2A] [&_h1]:text-[#FF8966] [&_h2]:text-[#E5446D] [&_h3]:text-[#706C61] [&_h3]:py-2 [&_h3]:text-2xl">
         <h1 class="text-5xl font-bold ">RIT Senior Project: The Nimbus Navigators<h1>
