--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         <script>
             //input file path to add to list of files
             const pdfFiles = [
-                'assets/pdfs/1.pdf',
+                'assets/pdfs/temp.pdf',
             ];
 
             function loadPDFs() {
