--- a/src/index.html
+++ b/src/index.html
@@ -4,35 +4,8 @@
         <title>RIT Senior Project: Single Pane of Glass</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./output.css" />
-        <script>
-            //input file path to add to list of files
-            const pdfFiles = [
-                'assets/pdfs/time-temp.pdf',
-                'assets/pdfs/doc-temp.pdf'
-            ];
-
-            function loadPDFs() {
-                const timeContainer = document.getElementById('time-container');
-                const docContainer = document.getElementById('doc-container');
-                pdfFiles.forEach(pdf => {
-                    const link = document.createElement('a');
-                    const fileNameType = pdf.split('/').pop().split(".")[0].split("-"); // name
-                    link.href = pdf; // Use relative path to the PDF file
-                    link.target = '_blank'; // Open in new tab
-                    link.textContent = fileNameType[1];
-                    if(fileNameType[0] == "time"){
-                        timeContainer.appendChild(link);
-                    } else if (fileNameType[0] == "doc"){
-                        docContainer.appendChild(link);
-                    } else {
-                        docContainer.appendChild(link);
-                    }
-                });
-            }
-            // Call function on page load
-            window.onload = loadPDFs;
-        </script>
+        <link rel="stylesheet" href="./css/output.css" />
+        <script src="./js/load.js"></script>
     </head>
     <body class="h-screen bg-white font-mono m-8 [&_p]:text-[#2A2B2A] [&_h1]:text-[#FF8966] [&_h2]:text-[#E5446D] [&_h3]:text-[#706C61] [&_h3]:py-2 [&_h3]:text-2xl">
         <h1 class="text-5xl font-bold ">RIT Senior Project: The Nimbus Navigators<h1>
@@ -44,15 +17,7 @@
                 <p>Coach: Bryan Bashum</p>
                 <h3 class="font-bold">Description</h3>
                 <p class="pb-2">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab dignissimos amet quasi sapiente
-                    repellendus error, perspiciatis accusantium odio cupiditate vitae quidem minima culpa quo
-                    asperiores. Porro unde quasi necessitatibus velit nam tempore a quod sit debitis quaerat
-                    voluptatem animi, tempora distinctio incidunt obcaecati nostrum maxime illo voluptas voluptatibus,
-                    perferendis doloremque perspiciatis minima maiores facilis? Debitis id voluptate iste laboriosam
-                    quisquam perferendis quaerat omnis architecto, sint eligendi aut commodi vitae accusamus impedit
-                    voluptatum ea inventore, earum harum quos voluptas sit eveniet, libero reprehenderit maxime? Facilis
-                    hic asperiores ipsam sint quis illo veniam repellendus? Eius accusantium unde possimus harum molestias
-                    id ratione?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe veritatis iure unde molestiae sequi. Sit itaque et iste? Repudiandae totam maiores magnam distinctio, id, numquam quod perferendis necessitatibus blanditiis neque eius culpa facilis quisquam sint aspernatur hic quas molestiae explicabo sed recusandae adipisci voluptatibus laudantium enim? Ex iure molestiae eos earum, voluptate dolores deleniti praesentium, officiis rem, in qui! Repellat earum rerum debitis dolores fuga nulla. Perferendis accusantium iure sunt ad, autem aut nulla maiores dignissimos tempora quis deleniti explicabo suscipit magni ullam laudantium, temporibus aliquam exercitationem magnam maxime aspernatur nam esse, illum minus. Facilis odit beatae pariatur omnis expedita?
                 </p>
                 <div class="[&_li]:p-1 [&_li]:before:content-['>>'] [&_li]:text-black">
                     <h3 class="font-bold">Members</h3>
@@ -77,12 +42,12 @@
                 </div>
                 <div>
                     <h3 class="font-bold">Team Documents</h3>
-                    <div id="doc-container" class="flex flex-row [&_a]:flex-auto [&_a]:px-2
+                    <div id="doc-container" class="grid md:grid-cols-6 sm:grid-flow-col sm:grid-cols-none [&_a]:px-2
                     [&_a]:text-[#E5446D] [&_a]:text-center [&_a]:bg-neutral-200
                      [&_a]:p-1 [&_a]:m-2 [&_a]:rounded-full">
                      </div>
                     <h3 class="font-bold">Time Reports</h3>
-                    <div id="time-container" class="flex flex-row [&_a]:flex-auto [&_a]:px-2
+                    <div id="time-container" class="grid md:grid-cols-6 sm:grid-flow-col sm:grid-cols-none [&_a]:px-2
                    [&_a]:text-[#E5446D] [&_a]:text-center [&_a]:bg-neutral-200
                     [&_a]:p-1 [&_a]:m-2 [&_a]:rounded-full">
                     </div>
